@@ -1,4 +1,6 @@
 Version 1.0.30:
+- Libidn is not required for IDN support anymore on systems where getaddrinfo()
+  supports the AI_IDN flag and the GnuTLS version is >= 3.4.0.
 - Support for SOCKS proxies was added.
 - SSLv3 is disabled, and the obsolete tls_force_sslv3 command and
   --tls-force-sslv3 option have no effect anymore.
